FIX chat window auto-scrolls only when scrollbar is at limit OOP forgot to adjust some other scrollbars

--- a/au/src/style_utilities/partials/_chat_window.styl
+++ b/au/src/style_utilities/partials/_chat_window.styl
@@ -426,6 +426,14 @@ section#MainWindow
     z-index: 1
 
     .message-tray
+      position: absolute
+      top 0
+      left 0
+      right 0
+      bottom 0
+      padding-right 5px
+      margin-right 2px
+      overflow-x auto
       display: block
 
 
